<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.setting.NotifySettingActivity"
    >

    <!--定义顶部 TopBar-->
    <include layout="@layout/widget_common_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_card_bg"
        android:orientation="vertical"
        >
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/notify_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:vm_line_decoration="true"
            app:vm_line_description="@string/notify_desc"
            app:vm_line_right_icon="@drawable/im_ic_switch_selector"
            app:vm_line_title="@string/notify"
            />
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/notify_setting_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:vm_line_description="@string/notify_detail_desc"
            app:vm_line_right_icon="@drawable/im_ic_switch_selector"
            app:vm_line_title="@string/notify_detail"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.vmloft.develop.library.tools.widget.VMLineView
            android:id="@+id/notify_setting_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_normal"
            android:background="@color/app_card_bg"
            app:vm_line_description="@string/notify_system_desc"
            app:vm_line_right_icon="@drawable/im_ic_arrow_right"
            app:vm_line_title="@string/notify_system"
            />

    </LinearLayout>
</LinearLayout>